Fixed spacing problem on CGCI landing page.

--- a/docroot/sites/all/themes/new_ocg/sass/components/_misc.scss
+++ b/docroot/sites/all/themes/new_ocg/sass/components/_misc.scss
@@ -1576,7 +1576,8 @@ span.noicon {
 
 .view-publications.view-display-id-page_2 .views-field-field-publication-summary,
 .view-publications.view-display-id-page_1 .views-field-field-publication-summary,
-.view-projects.view-display-id-page_1 .views-field-body {
+.view-projects.view-display-id-page_1 .views-field-body,
+.view-projects.view-display-id-block .views-field-body {
   margin-bottom: 40px;
 }
 
